--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.example.nextron
-productName: My Nextron App
+appId: com.chatty.nextron
+productName: chatty
 copyright: Copyright © 2018 Yoshihide Shiono
 directories:
   output: dist
