--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
+    "build:all": "nextron build --all",
+    "build:win32": "nextron build --win --ia32",
+    "build:win64": "nextron build --win --x64",
+    "build:mac": "nextron build --mac --x64",
+    "build:linux": "nextron build --linux",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.9",
     "antd": "^5.1.7",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
@@ -27,5 +33,4 @@
     "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
   }
-  
 }
